--- a/GameData/ZZZ_FelgerFixes/RT_ProbeRemover.cfg
+++ b/GameData/ZZZ_FelgerFixes/RT_ProbeRemover.cfg
@@ -1,4 +1,5 @@
 @PART[*]:HAS[@MODULE[ModuleCommand]]:FINAL
 {
-	!MODULE[ModuleSPU] {}
+	!MODULE[ModuleSPU],* {}
+    !MODULE[ModuleSPUPassive],* {}
 }
